--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -67,6 +67,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-weight: 300;
   letter-spacing: 0.03em;
+  font-variant-numeric: lining-nums;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
